# TodoList

./: Makefile  README.md  commands.txt  docker-compose.yml
backend/: dockerfile  pyproject.toml  requirements.txt
backend/api/: main.py  models.py  postgres.py
frontend/: dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
