[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GeertenRijsdijk-AH <geerten.rijsdijk1@ah.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"